--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEvenrtListener('keydown', function (e) {
+  window.addEventListener('keydown', function (e) {
     console.log(e);
   });
 </script>
