--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
-        src="https://www.twitch.tv/embed/hebo/chat?parent=foxholelive.org"
+        src="https://www.twitch.tv/embed/foxholelive/chat?parent=foxholelive.org"
         height="500"
         width="350">
 </iframe>
