--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         height: 480,
         channel: "FoxholeLive",
         autoplay: "true",
+        parent: ["thefoxhole.com/live", "foxholelive.org"]
       };
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
