--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         height: 480,
         channel: "FoxholeLive",
         autoplay: "true",
-        parent: ["thefoxhole.com", "foxholelive.org", "officialj.com"]
+        parent: ["foxholelive.org", "officialj.com"]
       };
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
