--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
-        src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=foxholelive.org"
+        src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
         height="500"
         width="350">
 </iframe>
