--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self'">-->
   <title>TEST</title>
   <!--<link rel="stylesheet" href="style.css">-->
+  <style>
+    iframe{
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
 <!-- embed twitch video -->
