--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>TEST</title>
   <!--<link rel="stylesheet" href="style.css">-->
   <style>
-    iframe{
+    .frame{
       text-align: center;
     }
   </style>
@@ -26,7 +26,7 @@
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
 </script>
-<iframe frameborder="0"
+<iframe id="frame" frameborder="0"
         scrolling="no"
         id="chat_embed"
         src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
