--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
 </script>
-<iframe style=text-align:center; frameborder="0"
+<iframe frameborder="0"
+        align="middle"
         scrolling="no"
         id="chat_embed"
         src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
