--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
 </script>
-<iframe frameborder="0"
-        align="middle"
+<div id="frame"><iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
         src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
         height="500"
         width="350">
-</iframe>
+</iframe></div>
 
 </body>
 </html>
