--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>TEST</title>
   <!--<link rel="stylesheet" href="style.css">-->
   <style>
-    .frame{
+    #frame{
       text-align: center;
     }
   </style>
