--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <!--<link rel="stylesheet" href="style.css">-->
   <style>
     #frame{
-      text-align: center;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
     }
   </style>
 </head>
