--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
       var options = {
+        layout: "video-with-chat",
         width: 854,
         height: 480,
         channel: "FoxholeLive",
