--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
 </script>
-<!--<div id="frame"><iframe frameborder="0"
+<div id="frame"><iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
         src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
-        height="500"
-        width="350">
-</iframe></div>-->
+        height="50%"
+        width="50%">
+</iframe></div>
 
 </body>
 </html>
