--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         scrolling="no"
         id="chat_embed"
         src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
-        height=100%
-        width=50%>
+        height="100%"
+        width="50%">
 </iframe></div>
 
 </body>
