--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         id="chat_embed"
         src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
         height="500"
-        width=50%>
+        width="50%">
 </iframe></div>
 
 </body>
