--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     align-items: center;
     justify-content: center;
     }
+    body {
+      display:flex;
+      align-items: center;
+      justify-content: center;
+    }
   </style>
 </head>
 <body>
