--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
       display:flex;
       align-items: center;
       justify-content: center;
-      max-width: 100%;
     }
   </style>
 </head>
 <body>
 <!-- embed twitch video -->
-<script src= "https://player.twitch.tv/js/embed/v1.js"></script>
+<script style=max-width:100%; src= "https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
       var options = {
