--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 </head>
 <body>
 <!-- embed twitch video -->
-<script style=max-width:100%; src= "https://player.twitch.tv/js/embed/v1.js"></script>
+<div style=max-width:100%;>
+<script src= "https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
       var options = {
@@ -36,7 +37,7 @@
       };
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
-</script>
+</script></div>
 <div id="frame"><iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
