--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <!-- embed twitch video -->
-<div style=max-width:100%;>
+<div style=max-width:device-width;>
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
