--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <script type="text/javascript">
       var options = {
         layout: "video-with-chat",
-        max-width: 100%,
-        height: auto,
+        width: 854,
+        height: 480,
         channel: "FoxholeLive",
         autoplay: "true",
         parent: ["foxholelive.org", "officialj.com"]
