--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <script type="text/javascript">
       var options = {
         layout: "video-with-chat",
-        width: 854,
+        width: "100%",
         height: 480,
         channel: "FoxholeLive",
         autoplay: "true",
