--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       };
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
-</script>
+</script></div>
 <div id="frame"><iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
@@ -46,6 +46,6 @@
         width="100%">
 </iframe>
 </div>
-</div>
+
 </body>
 </html>
