--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       var options = {
         layout: "video-with-chat",
         width: "100%",
-        height: 480,
+        height: "100%",
         channel: "FoxholeLive",
         autoplay: "true",
         parent: ["foxholelive.org", "officialj.com"]
