--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       display:flex;
       align-items: center;
       justify-content: center;
-      max-width: 100%;      
+   
     }
   </style>
 </head>
@@ -30,7 +30,7 @@
       <script type="text/javascript">
       var options = {
         layout: "video-with-chat",
-        width: 854,
+        width: "100%",
         height: 480,
         channel: "FoxholeLive",
         autoplay: "true",
