--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
       var options = {
-        layout: "video-with-chat",
+        //layout: "video-with-chat",
         width: "100%",
         height: 480,
         channel: "FoxholeLive",
