--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
       var options = {
-        //layout: "video-with-chat",
+        layout: "video-with-chat",
         width: "100%",
         height: 480,
         channel: "FoxholeLive",
@@ -39,13 +39,13 @@
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
 </script></div>
-<div id="frame"><iframe frameborder="0"
+<!--<div id="frame"><iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
         src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
         height="500"
         width="100%">
-</iframe></div>
+</iframe></div>-->
 
 </body>
 </html>
