--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <script type="text/javascript">
       var options = {
         layout: "video-with-chat",
-        width: "100%",
+        width: 854,
         height: 480,
         channel: "FoxholeLive",
         autoplay: "true",
