--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         height: 480,
         channel: "FoxholeLive",
         autoplay: "true",
+        allowfullscreen: "true",
         parent: ["foxholelive.org", "officialj.com"]
       };
       var player = new Twitch.Player("nplive-stream", options);
