--- a/index.html
+++ b/index.html
@@ -14,17 +14,32 @@
     justify-content: center;
 
     }
-    body {
+    .main {
       display:flex;
       align-items: center;
-      justify-content: center;
-   
+      justify-content: center;}
+    @media only screen and (max-width:800px) {
+    /* For tablets: */
+    .main {
+     width: 80%;
+      padding: 0;
+    }
+    .right {
+      width: 100%;
+    }
+  }
+@media only screen and (max-width:500px) {
+  /* For mobile phones: */
+  .menu, .main, .right {
+    width: 100%;
+  }
+}
     }
   </style>
 </head>
 <body>
 <!-- embed twitch video -->
-<div>
+<div class="main"> 
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
