--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body>
 <!-- embed twitch video -->
 <div style=max-width:80%;>
+  <div style=max-width:fit-content;>
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
@@ -40,6 +41,7 @@
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
 </script></div>
+</div>
 <!--<div id="frame"><iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
