--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     }
     body {
-      display:flex;
+      display:inline-flex;
       align-items: center;
       justify-content: center;
    
@@ -24,7 +24,7 @@
 </head>
 <body>
 <!-- embed twitch video -->
-<div style=display:flexbox>
+<div>
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
