--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <!-- embed twitch video -->
-<div>
+<div style=width:100%;>
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
