--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
 
     }
     body {
-      display:inline-flex;
+      display:flex;
       align-items: center;
       justify-content: center;
    
+    }
+    #twitch {
+      max-width: 100%;
     }
   </style>
 </head>
 <body>
 <!-- embed twitch video -->
-<div style=max-width:100%;height:auto;>
+<div id="twitch" style=max-width:100%;height:auto;>
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
