--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
     }
     #twitch {
       max-width: 100%;
+      height: auto;
     }
   </style>
 </head>
 <body>
 <!-- embed twitch video -->
-<div id="twitch" style=max-width:100%;height:auto;>
+<div id="twitch">
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
