--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       display:flex;
       align-items: center;
       justify-content: center;
-      max-width: 100%;
+      width: 100%;
       height: auto;
     }
   </style>
@@ -32,8 +32,8 @@
       <script type="text/javascript">
       var options = {
         layout: "video-with-chat",
-        width: 854,
-        height: 480,
+        //width: 854,
+        //height: 480,
         channel: "FoxholeLive",
         autoplay: "true",
         allowfullscreen: "true",
