--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <script type="text/javascript">
       var options = {
         layout: "video-with-chat",
-        //width: 854,
-        //height: 480,
+        width: 340,
+        height: 400,
         channel: "FoxholeLive",
         autoplay: "true",
         allowfullscreen: "true",
