--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
   
     #twitch {
-      display:flex;
+      display:inline-flexbox;
       align-items: center;
       justify-content: center;
       width: 100%;
@@ -32,8 +32,8 @@
       <script type="text/javascript">
       var options = {
         layout: "video-with-chat",
-        width: "100%",
-        height: "100%",
+        width: 854,
+        height: 480,
         channel: "FoxholeLive",
         autoplay: "true",
         allowfullscreen: "true",
