--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
   
     #twitch {
-      display:inline-flexbox;
+      display:inline-flex;
       align-items: center;
       justify-content: center;
       width: 100%;
