--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
   
     #twitch {
-      display:inline-flex;
+      display:block;
       align-items: center;
       justify-content: center;
       width: 100%;
@@ -32,8 +32,8 @@
       <script type="text/javascript">
       var options = {
         layout: "video-with-chat",
-        width: 780,
-        height: 400,
+        width: 854,
+        height: 480,
         channel: "FoxholeLive",
         autoplay: "true",
         allowfullscreen: "true",
