--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
 <!-- embed twitch video -->
+<div style=width:80%;
 <div id="twitch">
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
@@ -42,6 +43,7 @@
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
 </script></div>
+</div>
 <!--<div id="frame"><iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
