--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     }
   
-    #twitch {
+    #twitch, #nplive-stream {
       display:flex;
       align-items: center;
       justify-content: center;
@@ -28,8 +28,8 @@
 <!-- embed twitch video -->
 
 <div id="twitch">
-<script src= "https://player.twitch.tv/js/embed/v1.js"></script>
-      <div id="nplive-stream" style="text-align: center; max-width:100%;"></div>
+<script src="https://player.twitch.tv/js/embed/v1.js"></script>
+      <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
       var options = {
         layout: "video-with-chat",
