--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <title>TEST</title>
   <!--<link rel="stylesheet" href="style.css">-->
   <style>
-    #frame{
 
+    html {
+      max-width:100%;
+    }
+
+    #frame{
     display: flex;
     align-items: center;
     justify-content: center;
