--- a/index.html
+++ b/index.html
@@ -11,15 +11,8 @@
     html {
       max-width:100%;
     }
-
-    #frame{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    }
   
-    #twitch, #nplive-stream {
+    #frame, #twitch, #nplive-stream {
       display:flex;
       align-items: center;
       justify-content: center;
