--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         id="chat_embed"
         src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
         height="500"
-        width="100%">
+        width="350">
 </iframe></div>
 
 </body>
