--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       player.setVolume(0.5);
 </script></div>
 
-<div id="frame"><iframe frameborder="0"
+<!--<div id="frame"><iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
         src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
         height="500"
         width="350">
-</iframe></div>
+</iframe></div>-->
 
 </body>
 </html>
