--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       align-items: center;
       justify-content: center;
       width: 100%;
-      height: auto;
+      height: 50%;
     }
   </style>
 </head>
