--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       align-items: center;
       justify-content: center;
       width: 100%;
-      height: 25%;
+      height: auto;
     }
   </style>
 </head>
 <body>
 <!-- embed twitch video -->
 
-<div id="twitch">
+<div id="twitch" style="border-bottom:0;">
 <script src="https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
