--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 <!-- embed twitch video -->
 
-<div id="twitch" style="border-bottom:0;">
+<div id="twitch" style="margin-bottom:auto;">
 <script src="https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center;"></div>
       <script type="text/javascript">
