--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
 <!-- embed twitch video -->
 
-<div id="twitch" style="margin-bottom:auto;">
+<div id="twitch">
 <script src="https://player.twitch.tv/js/embed/v1.js"></script>
-      <div id="nplive-stream" style="text-align: center;"></div>
+      <div id="nplive-stream" style="text-align: center; height:auto;"></div>
       <script type="text/javascript">
       var options = {
         layout: "video-with-chat",
