--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div id="nplive-stream" style="text-align: center; height:auto;"></div>
       <script type="text/javascript">
       var options = {
-        layout: "video-with-chat",
+        layout: "video",
         width: 854,
         height: 480,
         channel: "FoxholeLive",
