--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
         height="500"
         width="350">
-</iframe><-->/div>
+</iframe>--></div>
 
 </body>
 </html>
