--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@
   </style>
 </head>
 <body>
-<!-- embed twitch video -->
 
+    <!-- Add a placeholder for the Twitch embed -->
+    <div id="twitch-embed"></div>
+
+    <!-- Load the Twitch embed script -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+
+
+<!-- embed twitch video -->
 <div id="twitch">
-<script src="https://player.twitch.tv/js/embed/v1.js"></script>
+<!--<script src="https://player.twitch.tv/js/embed/v1.js"></script>
       <div id="nplive-stream" style="text-align: center; height:auto;"></div>
       <script type="text/javascript">
       var options = {
@@ -39,7 +47,31 @@
       };
       var player = new Twitch.Player("nplive-stream", options);
       player.setVolume(0.5);
-</script></div>
+</script>-->
+    <!--
+      Create a Twitch.Embed object that will render
+      within the "twitch-embed" root element.
+    -->
+    <script type="text/javascript">
+      var embed = new Twitch.Embed("twitch-embed", {
+        layout: "video-with-chat",
+        width: 854,
+        height: 480,
+        channel: "FoxholeLive",
+        autoplay: "true",
+        allowfullscreen: "true",
+        // only needed if your site is also embedded on embed.example.com and othersite.example.com 
+        parent: ["foxholelive.org", "officialj.com"]
+      });
+
+      embed.addEventListener(Twitch.Embed.VIDEO_READY, () => {
+        var player = embed.getPlayer();
+        player.play();
+      });
+    </script>
+
+
+</div>
 
 <div id="frame"><!--<iframe frameborder="0"
         scrolling="no"
@@ -51,3 +83,5 @@
 
 </body>
 </html>
+
+
