--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       max-width:100%;
     }
   
-    #frame, #twitch, #nplive-stream {
+    #twitch-embed, #frame, #twitch, #nplive-stream {
       display:flex;
       align-items: center;
       justify-content: center;
