--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <script type="text/javascript">
       var embed = new Twitch.Embed("twitch-embed", {
         layout: "video-with-chat",
-        width: 1280,
-        height: 720,
+        width: 960, //1280
+        height: 540, //720
         channel: "FoxholeLive",
         autoplay: "true",
         allowfullscreen: "true",
