--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     -->
     <script type="text/javascript">
       var embed = new Twitch.Embed("twitch-embed", {
-        layout: "video-with-chat",
+        layout: "video",
         width: 960, //1280
         height: 540, //720
         channel: "FoxholeLive",
