--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     -->
     <script type="text/javascript">
       var embed = new Twitch.Embed("twitch-embed", {
-        layout: "video",
-        width: 960, //1280
-        height: 540, //720
+        layout: "video-with-chat",
+        width: 1060, //1280
+        height: 640, //720
         channel: "FoxholeLive",
         autoplay: "true",
         allowfullscreen: "true",
