--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 </head>
 <body>
 
-    <!-- Add a placeholder for the Twitch embed -->
-    <div id="twitch-embed"></div>
+    <!-- Add a placeholder for the Twitch embed 
+    <div id="twitch-embed"></div>-->
 
-    <!-- Load the Twitch embed script -->
-    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+    <!-- Load the Twitch embed script 
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>-->
 
 
 
@@ -52,7 +52,7 @@
       Create a Twitch.Embed object that will render
       within the "twitch-embed" root element.
     -->
-    <script type="text/javascript">
+   <!-- <script type="text/javascript">
       var embed = new Twitch.Embed("twitch-embed", {
         layout: "video-with-chat",
         width: 960, //1280
@@ -74,7 +74,7 @@
     </script>
 </div>
 
-<div id="frame"><!--<iframe frameborder="0"
+<div id="frame"><iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
         src="https://www.twitch.tv/embed/FoxholeLive/chat?parent=officialj.com"
